--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 85%
               </div>
             </div>
-            <p>CSS</p>
+            <p>CSS/CSS3</p>
             </a>
           </div>
           <div class="col-lg-3 col-lg-offset-1 centered">
@@ -115,7 +115,7 @@
                 90%
               </div>
             </div>
-            <p>HTML</p>
+            <p>HTML/HTML5</p>
             </a>
           </div>
           <div class="col-lg-3 col-lg-offset-1 centered">
@@ -170,19 +170,19 @@
           <h2 class="centered">我的作品</h2>
         </div>
         <div class="col-xs-6 col-md-3">
-          <a href="https://shanruihuan.github.io/yoyogame/" target="_blank" class="thumbnail">
+          <a href="http://ruirae.coding.me/yoyogame/" target="_blank" class="thumbnail">
             <img src="img/batman.jpg" alt="作品1">
           </a>
           <h4>yoyo游戏静态页面</h4>
         </div>
         <div class="col-xs-6 col-md-3">
-          <a href="#" class="thumbnail">
+          <a href="http://ruirae.coding.me/picture-show" class="thumbnail">
             <img src="img/flash.png" alt="作品2">
           </a>
-          <h4>Demo:瀑布流布局</h4>
+          <h4>Demo:图片展示布局</h4>
         </div>
         <div class="col-xs-6 col-md-3">
-          <a href="https://shanruihuan.github.io/web-site-navigation/" target="_blank" class="thumbnail">
+          <a href="http://ruirae.coding.me/website-navigation/" target="_blank" class="thumbnail">
             <img src="img/caption_america.jpg" alt="作品3">
           </a>
           <h4>Demo:网页定位导航</h4>
@@ -218,7 +218,7 @@
       <div class="row">
         <div class="col-lg-12 ">
           <p class="pull-right"><a href="#top" style="text-decoration: none;color: #787d82">回到顶部</a></p>
-          <p>Created by shan</p>
+          <p>Created by shanruihuan</p>
         </div>
       </div>
     </div> 
