--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <h4>yoyo游戏静态页面</h4>
         </div>
         <div class="col-xs-6 col-md-3">
-          <a href="http://ruirae.coding.me/picture-show" class="thumbnail">
+          <a href="http://ruirae.coding.me/picture-show" target="_blank" class="thumbnail">
             <img src="img/flash.png" alt="作品2">
           </a>
           <h4>Demo:图片展示布局</h4>
@@ -188,7 +188,7 @@
           <h4>Demo:网页定位导航</h4>
         </div>
         <div class="col-xs-6 col-md-3">
-          <a href="#" class="thumbnail">
+          <a href="#" target="_blank" class="thumbnail">
             <img src="img/deadpool.png" alt="作品4">
           </a>
           <h4>Demo:字幕无缝滚动</h4>
