--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
           <h4>Demo:网页定位导航</h4>
         </div>
         <div class="col-xs-6 col-md-3">
-          <a href="#" target="_blank" class="thumbnail">
+          <a href="http://ruirae.coding.me/QQ-login-ui" target="_blank" class="thumbnail">
             <img src="img/deadpool.png" alt="作品4">
           </a>
-          <h4>Demo:字幕无缝滚动</h4>
+          <h4>Demo:QQ登录界面</h4>
         </div>
       </div><!--/.row -->
     </div><!--/.container -->
