--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 ">
-          <h2 class="centered">联系我</h2>
+          <h2 class="centered">联系方式</h2>
         </div>
         <div class="col-lg-6 ">
           <img src="img/phone1.png">
