--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li class="active"><a href="#introtext">个人简介</a></li>
           <li><a href="#skillswrap">专业技能</a></li>
           <li><a href="#work-exp">工作经历</a></li>
-          <li><a href="#demos">作品展示</a></li>
+          <li><a href="#demos">我的作品</a></li>
           <li><a href="#contact">联系方式</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
