--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         
         <div class="col-md-5">
           <p>我是一个性格幽默、做事认真的人。我喜欢研究所碰到的各种技术，不给自己设边界，有 Geek 精神。我有时间概念，能在约定时间内保证完成任务。</p>
-          <p>自学前端半年，熟悉 HTML、CSS、Javascript，能熟练开发符合 W3C 标准的页面，熟练使用 jQuery 框架，有良好的编码习惯。</p>
+          <p>熟悉 HTML、CSS、Javascript，能熟练开发符合 W3C 标准的页面，熟练使用 jQuery 框架，有良好的编码习惯。</p>
         </div>
       </div>
     </div>
@@ -157,8 +157,8 @@
         </div>
         <div class="col-lg-3">2015.7-2016.8<br>
           <h4>南京普天网络有限公司</h4>
-          <p>安防工程师</p>
-          <p>主要职责：安防工程前期的现场勘查、线路设计、材料预算等; 安防工程施工期间进行技术指导、现场管理等; 协助安防工程的验收及售后维保等。</p>
+          <p>web前端</p>
+          <p>主要职责：使用photoshop将设计稿切图,用div+css进行布局搭建，编写成符合标准的静态页面,根据设计要求，用jquery框架添加所需的动态效果,配合设计师对页面进行修改完善，配合后端人员进行数据对接</p>
         </div>
       </div><!--/.row -->
     </div><!--/.container -->
@@ -179,10 +179,10 @@
           <a href="http://ruirae.coding.me/picture-show" target="_blank" class="thumbnail">
             <img src="img/flash.png" alt="作品2">
           </a>
-          <h4>Demo:图片展示布局</h4>
+          <h4>Demo:简易计算器</h4>
         </div>
         <div class="col-xs-6 col-md-3">
-          <a href="http://ruirae.coding.me/website-navigation/" target="_blank" class="thumbnail">
+          <a href="http://codepen.io/ruirae/full/bBJrba/" target="_blank" class="thumbnail">
             <img src="img/caption_america.jpg" alt="作品3">
           </a>
           <h4>Demo:网页定位导航</h4>
