--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
           <h4>yoyo游戏静态页面</h4>
         </div>
         <div class="col-xs-6 col-md-3">
-          <a href="http://ruirae.coding.me/picture-show" target="_blank" class="thumbnail">
+          <a href="http://codepen.io/ruirae/full/bBJrba/" target="_blank" class="thumbnail">
             <img src="img/flash.png" alt="作品2">
           </a>
           <h4>Demo:简易计算器</h4>
         </div>
         <div class="col-xs-6 col-md-3">
-          <a href="http://codepen.io/ruirae/full/bBJrba/" target="_blank" class="thumbnail">
+          <a href="http://ruirae.coding.me/website-navigation/" target="_blank" class="thumbnail">
             <img src="img/caption_america.jpg" alt="作品3">
           </a>
           <h4>Demo:网页定位导航</h4>
