--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
           <h4>Demo:简易计算器</h4>
         </div>
         <div class="col-xs-6 col-md-3">
-          <a href="http://ruirae.coding.me/website-navigation/" target="_blank" class="thumbnail">
+          <a href="http://codepen.io/ruirae/full/woRdvM/" target="_blank" class="thumbnail">
             <img src="img/caption_america.jpg" alt="作品3">
           </a>
-          <h4>Demo:网页定位导航</h4>
+          <h4>Demo:LOL语录</h4>
         </div>
         <div class="col-xs-6 col-md-3">
           <a href="http://ruirae.coding.me/QQ-login-ui" target="_blank" class="thumbnail">
