--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
               <h2 class="centered demos-text op0">我的作品</h2>
             </div>
             <div class="col-xs-6 col-md-3 demo1 op0">
-              <a href="http://ruirae.coding.me/yoyogame/" target="_blank" class="thumbnail">
+              <a href="http://ruirae.coding.me/houtai" target="_blank" class="thumbnail">
                 <img src="img/batman.jpg" alt="作品1">
               </a>
-              <h4>yoyo游戏静态页面</h4>
+              <h4>电商后台</h4>
             </div>
             <div class="col-xs-6 col-md-3 demo2 op0">
               <a href="http://codepen.io/ruirae/full/bBJrba/" target="_blank" class="thumbnail">
